fixed the text alignment on the blog profile page

--- a/blog.css
+++ b/blog.css
@@ -89,13 +89,22 @@ transform: rotate(-20deg);
 }
 
 /****************** Summary style ****************/
+.column-8 {
+  margin-left: auto;
+  margin-right: auto;
+}
 
-.summary p {
+.column-12 p {
   font-size: 20px;
   text-align: center;
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-bottom: 100px;
 
 }
 
-.summary h2 {
+.column-12 h2  {
   text-align: center;
+  margin-top: 50px;
+  margin-bottom: 75px;
 }
